--- a/WebInstaller/Pages/Shared/_CustomizedLayout.cshtml
+++ b/WebInstaller/Pages/Shared/_CustomizedLayout.cshtml
@@ -31,5 +31,22 @@
     <div>
         @RenderBody()
     </div>
+
+    <!--===============================================================================================-->
+    <script src="~/lib/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/lib/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/lib/bootstrap/js/popper.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/lib/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/lib/daterangepicker/moment.min.js"></script>
+    <script src="~/lib/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/lib/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="js/main.js"></script>
 </body>
 </html>
