--- a/WebInstaller/Pages/Index.cshtml
+++ b/WebInstaller/Pages/Index.cshtml
@@ -10,16 +10,31 @@
         <div class="wrap-login100">
             <form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
                 <span class="login100-form-title">
-                    Sign In
+                    Web Installer
                 </span>
 
                 <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-                    <input class="input100" type="text" name="username" placeholder="Username">
+                    <input class="input100" type="text" name="databaseName" placeholder="Database Name">
+                    <span class="focus-input100"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter Server Name">
+                    <input class="input100" type="text" name="ServerName" placeholder="Server Name">
+                    <span class="focus-input100"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter Server Port">
+                    <input class="input100" type="text" name="ServerPort" placeholder="Server Name">
+                    <span class="focus-input100"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter Server Username">
+                    <input class="input100" type="text" name="ServerPort" placeholder="Server UserName">
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Please enter password">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
+                    <input class="input100" type="password" name="ServerPassword" placeholder="Server Password">
                     <span class="focus-input100"></span>
                 </div>
 
@@ -35,7 +50,7 @@
 
                 <div class="container-login100-form-btn">
                     <button class="login100-form-btn">
-                        Sign in
+                        Generate Database
                     </button>
                 </div>
 
